# mof

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
data/: example_budget.csv
mof-og/src/: CMakeLists.txt  manager.hpp
mof-og/test/: CMakeLists.txt
mof-webapp/: .gitignore  00_START_HERE.md  COMPLETION_SUMMARY.sh  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.sh  EXECUTIVE_SUMMARY.md  FINAL_CHECKLIST.md  FIXES.md  FRAMEWORK_SUMMARY.md  ISSUES_RESOLVED.md  LOGS.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  REBUILD.sh  TEST_PLAN.md  docker-compose.yml  setup.sh
mof-webapp/backend/: .dockerignore  .env.example  Dockerfile  config.py  diagnose_tl.py  init_db.py  main.py  migrate.py  requirements.txt
mof-webapp/backend/api/: __init__.py  accounts.py  fx.py  gocardless.py  key_pairs.py  plaid.py  settings.py  sophtron.py  sync.py  transactions.py  truelayer.py  users.py
mof-webapp/backend/integrations/: __init__.py  base.py  gocardless_integration.py  ibkr_integration.py  plaid_integration.py  sophtron_integration.py  trading212_integration.py  truelayer_integration.py
mof-webapp/backend/models/: __init__.py  database.py  models.py
mof-webapp/backend/services/: fx_service.py  gocardless_client.py  plaid_client.py  provider_settings.py  sophtron_client.py  sync_service.py  truelayer_client.py
mof-webapp/frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
mof-webapp/frontend/src/: App.tsx  index.css
mof-webapp/frontend/src/components/: PlaidConnect.tsx  SophtronConnect.tsx
mof-webapp/frontend/src/pages/: Accounts.tsx  Dashboard.tsx  GoCardlessCallback.tsx  Manage.tsx  Settings.tsx  Transactions.tsx  TrueLayerCallback.tsx
mof-webapp/frontend/src/services/: api.ts
src/: CMakeLists.txt  category.cppm  category.hpp  currency.cppm  currency.hpp  entry.cppm  entry.hpp  fileio.cppm  fileio.hpp  main.cpp  manager.cppm  manager.hpp
test/: CMakeLists.txt  test_budget.cpp
